--- a/Masterarbeit 4/Tex/Literature.bib
+++ b/Masterarbeit 4/Tex/Literature.bib
@@ -593,6 +593,16 @@ pages={1-23}
   organization={ACM}
 }
 
+@misc{eclipseScrum, 
+    author = "{Eclipse}", 
+    publisher = "Eclipse", 
+    title = "Eclipse Scrum Library", 
+    month="July",
+    year = "2014", 
+    url = "http://www.eclipse.org/epf/downloads/praclib/praclib_downloads.php"}
+    
+  }
+
 
 
 
