--- a/Masterarbeit 4/Tex/chapter3.tex
+++ b/Masterarbeit 4/Tex/chapter3.tex
@@ -125,7 +125,7 @@ Negation Constraints & Stellt die negative Version der Relation Constraints dar.
 \label{tab:tab3}
  \end{table}
  
- Eine Übersicht über die genaue Notation von ConDec ist n Abhang A verfügbar.
+ Eine Übersicht über die genaue Notation von ConDec ist in Abhang A verfügbar.
  
 
 
