--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -241,7 +241,7 @@ für die Erstellung und Aktualisierung von Artefakten verantwortlich. Artefakte 
 \end{center}
 \end{figure}
 
-\subsubsection{Plan and manage iteration}
+\subsubsection{Plan and manage iteration- Inception}
 
 Die Aktivität \textit{Plan and manage iteration} wird während des gesamten Projektlebenszyklus ausgeführt. Ihr Ziel ist es, Risiken und Probleme früh genug zu identifizieren, damit diese entschärft werden können, um die Ziele für die Iteration festzulegen und das Team dabei zu unterstützen, diese zu erreichen.\newline
 Die iteration wird durch den Projektmanager und das Team gestartet. Hier findet die Priorisierung der Arbeit für eine gegebene Iteration statt. Der Projektmanager, die Stakeholder und die Teammitglieder einigen sich darauf, was während der Iteration zu entwickeln ist.\newline
@@ -252,7 +252,7 @@ Während der Iteration trifft sich das Team regelmäßig, um den aktuellen Stand
 \begin{figure}[htp]
 \begin{center}
   \includegraphics[width=\linewidth]{PlanAndManageIterationInception-2} %pdf, jpg, png...
-  \caption{Plan and manage iteration imperativ}
+  \caption{Plan and manage iteration imperativ -Inception}
   \label{fig:PlanAndManageIterationInception-2}
 \end{center}
 \end{figure}
@@ -260,7 +260,7 @@ Während der Iteration trifft sich das Team regelmäßig, um den aktuellen Stand
 \begin{figure}[htp]
 \begin{center}
   \includegraphics[width=\linewidth]{PlanAndManageIterationInception-2Unter} %pdf, jpg, png...
-  \caption{Plan and manage iteration imperativ}
+  \caption{Plan and manage iteration imperativ -Inception Unterprozess Umgebung vorbereiten} 
   \label{fig:PlanAndManageIterationInception-2}
 \end{center}
 \end{figure}
@@ -268,13 +268,16 @@ Während der Iteration trifft sich das Team regelmäßig, um den aktuellen Stand
 
 \begin{figure}[htp]
 \begin{center}
-  \includegraphics[width=\linewidth]{PlanAndManageIterationInception-2Unter} %pdf, jpg, png...
-  \caption{Plan and manage iteration imperativ}
+  \includegraphics[width=\linewidth]{PlanAndManageIterationInception-2UnterUnter} %pdf, jpg, png...
+  \caption{Plan and manage iteration imperativ-Inception Unterprozess Prozess maßschneidern}
   \label{fig:PlanAndManageIterationInception-2UnterUnter}
 \end{center}
 \end{figure}
 
+\subsubsection{Deploy Release-Transition}
 
+
+Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Komponenten in die Integrationsumgebung. 
 \begin{figure}[htp]
 \begin{center}
   \includegraphics[width=\linewidth]{DeployReleaseTransition} %pdf, jpg, png...
@@ -323,6 +326,50 @@ Während der Iteration trifft sich das Team regelmäßig, um den aktuellen Stand
   \label{fig:Backoutplanausfuhren}
 \end{center}
 \end{figure}
+
+\subsubsection{Develop Product Documentation-Construction}
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[width=\linewidth]{DevelopProductDocumentation} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction}
+  \label{fig:DevelopProductDocumentation}
+\end{center}
+\end{figure}
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[width=\linewidth]{ProduktdokumentationErstellen} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction Unterprozess Produktdokumentation erstellen}
+  \label{fig:ProduktdokumentationErstellen}
+\end{center}
+\end{figure}
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[width=\linewidth]{BenutzerDokumentationErstellen} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction Unterprozess BenutzerdokumentationErstellen}
+  \label{fig:BenutzerDokumentationErstellen}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[width=\linewidth]{UnterstuetzungsDokumentationErstellen} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction Unterprozess UnterstützungsdokumentationErstellen}
+  \label{fig:UnterstuetzungsdokumentationErstellen}
+\end{center}
+\end{figure}
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[width=\linewidth]{TrainingsmaterialErstellen} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction Unterprozess Trainingsmaterial erstellen}
+  \label{fig:TrainingsmaterialErstellen}
+\end{center}
+\end{figure}
+
 \subsection{Deklarative Modellierung Open Up}
 
 
