--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -249,7 +249,7 @@ Die Teammitglieder melden sich für die Arbeitsaufgaben, die während der Iterat
 Während der Iteration trifft sich das Team regelmäßig, um den aktuellen Stand der Arbeit und eventuelle Probleme zu besprechen.
 
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{PlanAndManageIterationInception-2} %pdf, jpg, png...
   \caption{Plan and manage iteration imperativ -Inception}
@@ -257,7 +257,7 @@ Während der Iteration trifft sich das Team regelmäßig, um den aktuellen Stand
 \end{center}
 \end{figure}
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{PlanAndManageIterationInception-2Unter} %pdf, jpg, png...
   \caption{Plan and manage iteration imperativ -Inception Unterprozess Umgebung vorbereiten} 
@@ -266,7 +266,7 @@ Während der Iteration trifft sich das Team regelmäßig, um den aktuellen Stand
 \end{figure}
 
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{PlanAndManageIterationInception-2UnterUnter} %pdf, jpg, png...
   \caption{Plan and manage iteration imperativ-Inception Unterprozess Prozess maßschneidern}
@@ -274,11 +274,58 @@ Während der Iteration trifft sich das Team regelmäßig, um den aktuellen Stand
 \end{center}
 \end{figure}
 
+
+\subsubsection{Identify and Refine Requirements-Elaboration}
+
+\begin{figure}[[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{IdentifyAndOutlineRequirements} %pdf, jpg, png...
+  \caption{Identify and Refine Requirements-Elaboration}
+  \label{fig:IdentifyAndOutlineRequirements}
+\end{center}
+\end{figure}
+
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{AnforderungenIdentifizieren} %pdf, jpg, png...
+  \caption{Identify and Refine Requirements-Elaboration Unterprozess Anforderungen identifizieren und abgrenzen}
+  \label{fig:AnforderungenIdentifizieren}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{UseCaseSzenarien} %pdf, jpg, png...
+  \caption{Identify and Refine Requirements-Elaboration Unterprozess Use-Case-Szenarien detaillieren}
+  \label{fig:UseCaseSzenarien}
+\end{center}
+\end{figure}
+
+
+\begin{figure}[[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{SystemweiteAnforderungen} %pdf, jpg, png...
+  \caption{Identify and Refine Requirements-Elaboration Unterprozess Systemweite Anforderungen definieren}
+  \label{fig:SystemweiteAnforderungen}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{TestfalleErstellen} %pdf, jpg, png...
+  \caption{Identify and Refine Requirements-Elaboration Unterprozess Testfälle erstellen}
+  \label{fig:TestfalleErstellen}
+\end{center}
+\end{figure}
+
 \subsubsection{Deploy Release-Transition}
 
 
 Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Komponenten in die Integrationsumgebung. 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{DeployReleaseTransition} %pdf, jpg, png...
   \caption{Deploy Release-Transition}
@@ -286,7 +333,7 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 \end{center}
 \end{figure}
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{Releasezusammenstellen} %pdf, jpg, png...
   \caption{Deploy Release-Transition Unterprozess Release zusammen stellen}
@@ -294,7 +341,7 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 \end{center}
 \end{figure}
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{Deploymentplanausfuhren} %pdf, jpg, png...
   \caption{Deploy Release-Transition Unterprozess Deploymentplan ausführen}
@@ -302,7 +349,7 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 \end{center}
 \end{figure}
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{erfolgreichesDeploymentsicherstellen} %pdf, jpg, png...
   \caption{Deploy Release-Transition Unterprozess Erfolgreiches Deployment sicherstellen}
@@ -310,7 +357,7 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 \end{center}
 \end{figure}
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{Backoutplanausfuhren} %pdf, jpg, png...
   \caption{Deploy Release-Transition Unterprozess Backoutplan ausführen}
@@ -319,7 +366,7 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 \end{figure}
 
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{ReleaseMitteilungenubermitteln} %pdf, jpg, png...
   \caption{Deploy Release-Transition Unterprozess Release Mitteilungen übermitteln}
@@ -329,7 +376,7 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 
 \subsubsection{Develop Product Documentation-Construction}
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{DevelopProductDocumentation} %pdf, jpg, png...
   \caption{Develop Product Documentation-Construction}
@@ -337,7 +384,7 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 \end{center}
 \end{figure}
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{ProduktdokumentationErstellen} %pdf, jpg, png...
   \caption{Develop Product Documentation-Construction Unterprozess Produktdokumentation erstellen}
@@ -345,30 +392,33 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 \end{center}
 \end{figure}
 
-\begin{figure}[htp]
+\begin{figure}[!htbp]
 \begin{center}
-  \includegraphics[width=\linewidth]{BenutzerDokumentationErstellen} %pdf, jpg, png...
-  \caption{Develop Product Documentation-Construction Unterprozess BenutzerdokumentationErstellen}
-  \label{fig:BenutzerDokumentationErstellen}
+  \includegraphics[width=\linewidth]{UseCaseSzenarien} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction Unterprozess Use-Case-Szenarien detaillieren}
+  \label{fig:UseCaseSzenarien}
+\end{center}
+\end{figure}
+
+\clearpage
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{UseCaseSzenarien} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction Unterprozess Use-Case-Szenarien detaillieren}
+  \label{fig:UseCaseSzenarien}
+\end{center}
+\end{figure}
+
+\begin{figure}[!htbp]
+\begin{center}
+  \includegraphics[width=\linewidth]{SystemweiteAnforderungen} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction Unterprozess SystemweiteAnforderungen detaillieren}
+  \label{fig:SystemweiteAnforderungen}
 \end{center}
 \end{figure}
 
 
-\begin{figure}[htp]
-\begin{center}
-  \includegraphics[width=\linewidth]{UnterstuetzungsDokumentationErstellen} %pdf, jpg, png...
-  \caption{Develop Product Documentation-Construction Unterprozess UnterstützungsdokumentationErstellen}
-  \label{fig:UnterstuetzungsdokumentationErstellen}
-\end{center}
-\end{figure}
-
-\begin{figure}[htp]
-\begin{center}
-  \includegraphics[width=\linewidth]{TrainingsmaterialErstellen} %pdf, jpg, png...
-  \caption{Develop Product Documentation-Construction Unterprozess Trainingsmaterial erstellen}
-  \label{fig:TrainingsmaterialErstellen}
-\end{center}
-\end{figure}
 
 \subsection{Deklarative Modellierung Open Up}
 
@@ -380,6 +430,18 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
   \label{fig:Develop}
 \end{center}
 \end{figure}
+
+
+
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[width=\linewidth]{DeployRelease} %pdf, jpg, png...
+  \caption{Deploy Release-Transition}
+  \label{fig:DeployRelease}
+\end{center}
+\end{figure}
+
 
 \begin{figure}[htp]
 \begin{center}
