--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -445,7 +445,7 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 
 \begin{figure}[htp]
 \begin{center}
-  \includegraphics[width=\linewidth]{PlanIterationdeclare} %pdf, jpg, png...
+  \includegraphics[width=\linewidth]{PlanAndManageIterationDec} %pdf, jpg, png...
   \caption{Plan and manage iteration deklarativ}
   \label{fig:PlanIterationdeclare}
 \end{center}
