--- a/Masterarbeit 4/Tex/masterarbeit.tex
+++ b/Masterarbeit 4/Tex/masterarbeit.tex
@@ -1,16 +1,16 @@
 \documentclass{thesis}
 
 % hier namen etc. einsetzen
-\fullname{VORNAME NACHNAME}
-\email{vorname.nachname@uni-ulm.de}
-\headline{Thema Zeile 1\\Thema Zeile 2\\Thema Zeile 3}
+\fullname{Bianka Hampp}
+\email{bianka.hampp@uni-ulm.de}
+\headline{Vergleich der Anwendbarkeit von\\deklarativen und imperativen\\Prozessmodellierungsansätzen \\ im Kontext von \\  Softwareentwicklungsprozessen}
 \titel{Thema}
 \jahr{JAHR}
 \matnr{MATRIKEL NR}
 \gutachterA{Gutachter 1}
 %\gutachterB{Gutachter 2}
 %\betreuer{Betreuer}
-\typ{Masterarbeit}
+\typ{Masterarbeit }
 \fakultaet{Ingenieurwissenschaften\\und Informatik}
 \institut{Institut für Datenbanken und Informationssysteme}
 
