--- a/Masterarbeit 4/Tex/chapter6.tex
+++ b/Masterarbeit 4/Tex/chapter6.tex
@@ -70,7 +70,7 @@ Das  \textit{Team} trifft sich während des \textit{Sprints} täglich in einem 1
 
 
 
-\section{Open Unified Process (Open Up)}
+\section{Open Unified Process (Open UP)}
 
 
 Der Open Unified Process, kurz Open Up ist eine frei zugängliche Variante des Rational Unified Process, welcher ein sehr bekannter Entwicklungsprozess ist \cite{hauber2010}.  Er ist Teil des Eclipse Process Frameworks. Open Up ist ein iterativer, inkrementeller und minimaler Prozess, aber dennoch vollständig und erweiterbar \cite{Gau2006, Basem2010}. Der Prozess ist minimal gehalten, da er nur die wesentlichen Inhalte einbezieht. Trotzdem ist er vollständig, da er als Prozess benutzt werden kann, um ein Softwaresystem zu entwickeln. Er ist außerdem auch erweiterbar, da er als Grundlage herangezogen werden kann und mit weiteren Prozessfragmenten aufgestockt und nach Belieben zugeschnitten werden kann \cite{Wang2007}. Das Konzept des Open Up ist es den Prozess zu vergrößern, sich aber auf das Minimum, welches für das Projekt benötigt wird zu beschränken, anstatt zu versuchen große, überladene Prozesse zu verstehen und diese dann zu verkleinern \cite{ambler2012}.  \newline
@@ -89,9 +89,9 @@ Es werden Rollen, Aufgaben, Artefakte und Ebenen in Open Up definiert. Dies soll
 \end{center}
 \end{figure}
 
-Der Open Up wird im Folgenden genauestens analysiert.
+Der Open UP wird im Folgenden genauestens analysiert.
 
-\subsection{Analyse Open Up}
+\subsection{Analyse Open UP}
 
 
 Auf der persönlichen Ebene teilen sich die Teammitglieder ihre Arbeit in \textit{Mikro-Inkremente} ein. Diese stellen das Ergebnis von Stunden, bzw. wenigen Tagen Arbeit dar. Die Arbeit entwickelt sich somit ein Mikro-Inkrement weiter und der Fortschritt kann Tag für Tag nachvollzogen werden. Die Teammitglieder teilen ihre Fortschritte täglich miteinander, was die Arbeitstransparenz und das Vertrauen erhöht und die Teamarbeit fördert \cite{eclipseopenup}. \newline
@@ -99,12 +99,12 @@ Auf der persönlichen Ebene teilen sich die Teammitglieder ihre Arbeit in \texti
 Auf der Team-Ebene wird das Projekt in Iterationen unterteilt, welche einen Zeitraum von mehreren Wochen umfassen, mit dem Ziel am Ende eines Iterationszyklus ein funktionierendes Softwareinkrement zu haben. Dieses Inkrement stellt eine Version des Softwaresystems dar welche zusätzliche oder verbesserte Funktionalitäten besitzt als die vorherige Version \cite{Basem2010}.  In jeder Iteration wird ein Iterationsplan angefertigt,  der vorgibt, was in dieser Iteration geliefert werden muss und auf welchen sich das Team verpflichten muss \cite{freudenreichevaluierung}.
 
 Auf Stakeholder-Ebene wird diesen durch den \textit{Projektlebenszyklus} die Möglichkeit gegeben, die Projektfinanzierung, den Umfang, das Risiko und andere Aspekte des Prozesses zu kontrollieren.
-Der Open Up teilt den \textit{Projektlebenszyklus} in vier Phasen ein, über welche Abbildung \ref{fig:Phasen} einen Überblick gibt \cite{eclipseopenup}.
+Der Open UP teilt den \textit{Projektlebenszyklus} in vier Phasen ein, über welche Abbildung \ref{fig:Phasen} einen Überblick gibt \cite{eclipseopenup}.
 
 \begin{figure}[htp]
 \begin{center}
   \includegraphics[width=\linewidth]{Lebenszyklusopenup} %pdf, jpg, png...
-  \caption{Phasen Open Up nach \cite{eclipseopenup}}
+  \caption{Phasen Open UP nach \cite{eclipseopenup}}
   \label{fig:Phasen}
 \end{center}
 \end{figure}
@@ -193,7 +193,7 @@ Transition Phase Iteration
 
 \hline
 
-\caption{Iterationen und Zielstellungen der Phasen in Open Up \cite{eclipseopenup}}
+\caption{Iterationen und Zielstellungen der Phasen in Open UP \cite{eclipseopenup}}
 \label{tab:tab1}
 \end{longtable}
 
@@ -202,7 +202,7 @@ Transition Phase Iteration
 
 
 
-Abbildung \ref{fig:RollenOpenUp} gibt einen Überblick über die verschiedenen Rollen in Open Up. Die Rolle \textit{Analyst} stellt den Kunden und Endnutzer dar. Die Aufgaben des \textit{Analysten} bestehen aus dem Sammeln von Informationen von den Stakeholdern, um das Problem, welches es zu lösen gilt, zu verstehen. Weiterhin erstellt er Anforderungen und setzt Prioritäten für diese.\newline
+Abbildung \ref{fig:RollenOpenUp} gibt einen Überblick über die verschiedenen Rollen in Open UP. Die Rolle \textit{Analyst} stellt den Kunden und Endnutzer dar. Die Aufgaben des \textit{Analysten} bestehen aus dem Sammeln von Informationen von den Stakeholdern, um das Problem, welches es zu lösen gilt, zu verstehen. Weiterhin erstellt er Anforderungen und setzt Prioritäten für diese.\newline
 Der \textit{Architekt} ist für die Definition der Software-Architektur verantwortlich. D.h. er trifft alle wichtigen technischen Entscheidungen, die die gesamte Entwicklung und Umsetzung des Systems betreffen \cite{OpenUPProcess}.\newline
 Der \textit{Entwickler} entwickelt einen Teil des Systems und muss hierbei sicherstellen, dass dieser in die Gesamtarchitektur passt. Er muss eventuell Prototypen des User-Interface anfertigen und anschließend die Komponenten implementieren, testen und integrieren.\newline
 Der \textit{Projekt Manager} führt die Planung des Projektes durch, koordiniert die Zusammenarbeit zwischen allen Beteiligten und achtet darauf, dass das Projektteam die Erfüllung der Projektziele stets im Auge behält \cite{OpenUPProcess}.\newline
@@ -211,17 +211,17 @@ Der \textit{Tester} ist für sämtliche Testaktivitäten verantwortlich. Diese u
 \begin{figure}[htp]
 \begin{center}
   \includegraphics[scale=0.6]{RollenOpenUp} %pdf, jpg, png...
-  \caption{Rollen in Open Up nach \cite{openup}}
+  \caption{Rollen in Open UP nach \cite{openup}}
   \label{fig:RollenOpenUp}
 \end{center}
 \end{figure}
 
-Eine Task bezeichnet in Open Up die Arbeitseinheit einer Rolle, welche von dieser durchgeführt werden soll. Insgesamt gibt es 18 Tasks, welche von den verschiedenen Rollen entweder als Primär-Darsteller(der Verantwortliche für die Durchführung der Aufgabe) oder als zusätzlicher Darsteller(Unterstützung und Bereitstellung von Informationen, die in der Task- Ausführung verwendet werden) durchgeführt werden. Hierdurch wird der kollaborative Charakter von Open Up gefestigt \cite{eclipseopenup}.
+Eine Task bezeichnet in Open UP die Arbeitseinheit einer Rolle, welche von dieser durchgeführt werden soll. Insgesamt gibt es 18 Tasks, welche von den verschiedenen Rollen entweder als Primär-Darsteller(der Verantwortliche für die Durchführung der Aufgabe) oder als zusätzlicher Darsteller(Unterstützung und Bereitstellung von Informationen, die in der Task- Ausführung verwendet werden) durchgeführt werden. Hierdurch wird der kollaborative Charakter von Open UP gefestigt \cite{eclipseopenup}.
 
 Ein Artefakt ist etwas, das hergestellt, modifiziert oder durch eine Task verwendet wird. Rollen sind 
-für die Erstellung und Aktualisierung von Artefakten verantwortlich. Artefakte stellen eine Versionskontrolle während des gesamten Projektlebenszyklus dar. Die 17 Artefakte in OpenUP gelten als die wesentlichen Artefakte, welche ein Projekt verwenden sollte, um produkt- und projektbezogene Informationen zu erfassen. Die Informationen müssen hierbei nicht mit formalen Artefakten festgehalten werden, dies kann auch informell, z.B durch White-Boards oder Meeting-Notizen geschehen. Es können die Open Up Artefakte oder eigene Artefakte verwendet werden \cite{eclipseopenup}.
+für die Erstellung und Aktualisierung von Artefakten verantwortlich. Artefakte stellen eine Versionskontrolle während des gesamten Projektlebenszyklus dar. Die 17 Artefakte in OpenUP gelten als die wesentlichen Artefakte, welche ein Projekt verwenden sollte, um produkt- und projektbezogene Informationen zu erfassen. Die Informationen müssen hierbei nicht mit formalen Artefakten festgehalten werden, dies kann auch informell, z.B durch White-Boards oder Meeting-Notizen geschehen. Es können die Open UP Artefakte oder eigene Artefakte verwendet werden \cite{eclipseopenup}.
 
-\subsection{Imperative Modellierung Open Up}
+\subsection{Imperative Modellierung Open UP}
 
 \subsubsection{Develop Solution Increment}
 
@@ -276,7 +276,12 @@ Während der Iteration trifft sich das Team regelmäßig, um den aktuellen Stand
 
 
 \subsubsection{Identify and Refine Requirements-Elaboration}
-
+ Die Aktivität Identify and Refine Requirements beschreibt die Aufgaben, welche durchzuführen sind, um die Anforderungen eines Systems zu sammeln, zu analysieren und zu validieren bevor die Implemementierung und die Validierung stattfinden. Sie wird in Zusammenarbeit mit Stakeholdern und dem gesamten Entwicklungsteam ausgeführt, um sicher zu gehen, dass klare, konsistente, korrekte und nachprüfbare Anforderungen vorhanden sind.\newline
+ In der Phase Elaboration liegt der Fokus hierbei auf der Definition der Lösung. Hierfür müssen diejenigen Anforderungen gefunden werden, welche für die Stakeholder am wichtigsten sind, die besonders herausfordernd oder sogar riskant sind oder eine große Bedeutung für die Architektur haben.\newline
+ Dafür ist es notwendig, zunächst die funktionalen und nicht-funktionalen Anforderungen an das System zu erheben. Genau diese Anforderungen stellen dann die Basis für die Kommunikation und die Übereinstimmung zwischen den Stakeholdern und dem Entwicklungsteam dar, in Bezug auf was das System können muss, um die Wünsche der Stakeholder zu erfüllen.\newline
+ Weiterhin müssen die Use-Case-Szenarien und die systemweiten Anforderungen ausführlich genug beschrieben werden, um sicher zu gehen, dass die Anforderungen richtig verstanden wurden und dass diese mit den Erwartungen der Stakeholder übereinstimmen.\newline
+ Zudem müssen Testfälle und Testdaten für die Anforderungen entwickelt werden, um ein gemeinsames Verständnis für die spezifischen Bedingungen, die die Lösung erfüllen muss, zu erreichen.
+ 
 \begin{figure}[[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{IdentifyAndOutlineRequirements} %pdf, jpg, png...
@@ -324,7 +329,12 @@ Während der Iteration trifft sich das Team regelmäßig, um den aktuellen Stand
 \subsubsection{Deploy Release-Transition}
 
 
-Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Komponenten in die Integrationsumgebung. 
+Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Komponenten in der Integrationsumgebung. \newline
+Hierfür ist es notwendig ein komplettes, bereitstellungsfähiges Paket zu erstellen, welches vom Deployment Engineer in die Bereitstellungsumgebung releast werden kann.\newline
+ Außerdem muss sichergestellt werden, dass der Roll-Out aus klaren, geprüften und wiederholbaren Anweisungen besteht und das Risiko eines Bereitstellungsfehlers muss minimiert werden. \newline
+ Zudem muss sichergestellt werden, dass eine Release zu keinen ungewollten Unterbrechungen im Ablauf in der Produktionsumgebung führt. \newline
+ Falls eine Release Probleme veursacht oder sie von den Stakeholdern als untauglich empfunden wird, muss diese Release von der Produktionsumgebung so schnell wie möglich entfernt werden. \newline
+ Zusätzlich muss dafür gesorgt werden, dass Informationen über eine anstehende Release weitest möglich verteilt werden.
 \begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{DeployReleaseTransition} %pdf, jpg, png...
@@ -375,7 +385,11 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 \end{figure}
 
 \subsubsection{Develop Product Documentation-Construction}
-
+ Das Ziel der Aktivität Develop Product Documentation ist es, die Produktdokumentation und Trainingsmaterial vor zu bereiten. Da die Produktdokumentation oftmals erst nach Abschluß der Entwicklungstätigkeiten erstellt wird, muss sichergstellt werden, dass die Funktionen die während einer Release entwickelt werden klar dokumentiert werden, solange die Funktionalität noch frisch in den Köpfen der Teammitglieder vorhanden ist.\newline
+ Hierfür ist es notwendig, dass genug Informationen über die Funktionen, die in einer bestimmten Release entwickelt wurden, dokumentiert werden, um dem Kunden während der gesamten Lebenszeit des Produkts nützlich zu sein.\newline
+ Weiterhin müssen den Endnutzern nützliche Informationen bereit gestellt werden in Form von Benutzerhandbüchern, Tutorials, häufig gestellte Fragen (FAQs), Online-Hilfedateien, Installationsanweisungen und Betriebsabläufe. \newline
+ Zudem muss sichergestellt werden, dass diejenigen, die mit der Unterstützung des Systems beauftragt sind, genug Informationen über das Produkt haben, um ihre Arbeit effektiv durchzuführen, nachdem das Produkt produktiv gegangen ist. \newline
+ Außerdem muss die Einführung des Produkts zu ermöglicht werden und dessen ordnungsgemäße Verwendung gewährleistet werden.
 \begin{figure}[!htbp]
 \begin{center}
   \includegraphics[width=\linewidth]{DevelopProductDocumentation} %pdf, jpg, png...
@@ -392,11 +406,14 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 \end{center}
 \end{figure}
 
+
+
+
 \begin{figure}[!htbp]
 \begin{center}
-  \includegraphics[width=\linewidth]{UseCaseSzenarien} %pdf, jpg, png...
-  \caption{Develop Product Documentation-Construction Unterprozess Use-Case-Szenarien detaillieren}
-  \label{fig:UseCaseSzenarien}
+  \includegraphics[width=\linewidth]{BenutzerDokumentationErstellen} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction Unterprozess Benutzerdokumentation erstellen}
+  \label{fig:BenutzerDokumentationErstellen}
 \end{center}
 \end{figure}
 
@@ -404,23 +421,23 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 
 \begin{figure}[!htbp]
 \begin{center}
-  \includegraphics[width=\linewidth]{UseCaseSzenarien} %pdf, jpg, png...
-  \caption{Develop Product Documentation-Construction Unterprozess Use-Case-Szenarien detaillieren}
-  \label{fig:UseCaseSzenarien}
+  \includegraphics[width=\linewidth]{UnterstuetzungsdokumentationErstellen} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction Unterprozess Unterstützungsdokumentation erstellen}
+  \label{fig:UnterstuetzungsdokumentationErstellen}
 \end{center}
 \end{figure}
 
 \begin{figure}[!htbp]
 \begin{center}
-  \includegraphics[width=\linewidth]{SystemweiteAnforderungen} %pdf, jpg, png...
-  \caption{Develop Product Documentation-Construction Unterprozess SystemweiteAnforderungen detaillieren}
-  \label{fig:SystemweiteAnforderungen}
+  \includegraphics[width=\linewidth]{TrainingsmaterialErstellen} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction Unterprozess Trainingsmaterial erstellen}
+  \label{fig:TrainingsmaterialErstellen}
 \end{center}
 \end{figure}
 
 
 
-\subsection{Deklarative Modellierung Open Up}
+\subsection{Deklarative Modellierung Open UP}
 
 
 \begin{figure}[htp]
@@ -433,16 +450,6 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 
 
 
-
-\begin{figure}[htp]
-\begin{center}
-  \includegraphics[width=\linewidth]{DeployRelease} %pdf, jpg, png...
-  \caption{Deploy Release-Transition}
-  \label{fig:DeployRelease}
-\end{center}
-\end{figure}
-
-
 \begin{figure}[htp]
 \begin{center}
   \includegraphics[width=\linewidth]{PlanAndManageIterationDec} %pdf, jpg, png...
@@ -452,6 +459,29 @@ Das Ergebnis dieser Aktivität ist die Release eines Sets von integrierten Kompo
 \end{figure}
 \subsection{Vergleich}
 
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[width=\linewidth]{DeployRelease} %pdf, jpg, png...
+  \caption{Deploy Release-Transition}
+  \label{fig:DeployRelease}
+\end{center}
+\end{figure}
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[width=\linewidth]{IdentifyAndRefineRequirementsDec} %pdf, jpg, png...
+  \caption{Identify and refine requirements-Elaboration}
+  \label{fig:IndetifyAndRefineRequirementsDec}
+\end{center}
+\end{figure}
+
+\begin{figure}[htp]
+\begin{center}
+  \includegraphics[width=\linewidth]{DevelopProductDocumentationDec} %pdf, jpg, png...
+  \caption{Develop Product Documentation-Construction}
+  \label{fig:DevelopProductDocumentationDec}
+\end{center}
+\end{figure}
 
 
 
@@ -570,6 +600,51 @@ Die Entscheidungspunkte für die Arbeitgeber/Arbeitnehmer Schnittstelle setzen s
 \end{center}
 \end{sidewaysfigure}
 \subsection{Imperative Modellierung V-Modell}
+
+
+\begin{sidewaysfigure}[htp]
+\begin{center}
+  \includegraphics[scale=0.7]{AngebotsVetragswesenVModell} %pdf, jpg, png...
+  \caption{Angebots- und Vetragswesen V-Modell}
+  \label{fig:AngebotsVetragswesenVModell}
+\end{center}
+\end{sidewaysfigure}
+
+
+\begin{sidewaysfigure}[htp]
+\begin{center}
+  \includegraphics[scale=0.7]{AngebotErstellenVModell} %pdf, jpg, png...
+  \caption{Angebots- und Vetragswesen V-Modell- Unterprozess Angebot erstellen}
+  \label{fig:AngebotErstellenVModell}
+\end{center}
+\end{sidewaysfigure}
+
+\begin{sidewaysfigure}[htp]
+\begin{center}
+  \includegraphics[scale=0.7]{Vertragabschliessen} %pdf, jpg, png...
+  \caption{Angebots- und Vetragswesen V-Modell- Unterprozess Vertrag abschließen}
+  \label{fig:Vertragabschliessen}
+\end{center}
+\end{sidewaysfigure}
+
+
+\begin{sidewaysfigure}[htp]
+\begin{center}
+  \includegraphics[scale=0.7]{Vertragszusatzabschlieen} %pdf, jpg, png...
+  \caption{Angebots- und Vetragswesen V-Modell- Unterprozess Vertragzusatz abschließen}
+  \label{fig:Vertragszusatzabschlieen}
+\end{center}
+\end{sidewaysfigure}
+
+\begin{sidewaysfigure}[htp]
+\begin{center}
+  \includegraphics[scale=0.7]{Lieferungerstellen} %pdf, jpg, png...
+  \caption{Angebots- und Vetragswesen V-Modell- Unterprozess Lieferung erstellen}
+  \label{fig:Lieferungerstellen}
+\end{center}
+\end{sidewaysfigure}
+
+
 \subsection{Deklarative Modellierung V-Modell}
 \subsection{Vergleich}
 
